--- a/seed_gathering/SeedGathering_OLD.ipynb
+++ b/seed_gathering/SeedGathering_OLD.ipynb
@@ -10,10 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "bfd3e144-73cb-42fa-9550-075c51686a77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tree_sitter_parser'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtree_sitter_parser\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LANGUAGE, make_parser, node_to_string\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatasets\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tree_sitter_parser'"
+     ]
+    }
+   ],
    "source": [
     "from tree_sitter_parser import LANGUAGE, make_parser, node_to_string\n",
     "import datasets\n",
@@ -2047,7 +2059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
