--- a/seed_gathering/SeedGathering.ipynb
+++ b/seed_gathering/SeedGathering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "bfd3e144-73cb-42fa-9550-075c51686a77",
    "metadata": {},
    "outputs": [],
@@ -56,16 +56,6 @@
     "    parameters: (formal_parameters) @method.parameters) @method.declaration\n",
     ")\n",
     "\"\"\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# JAVA_METHOD_QUERY = LANGUAGE.query(\"\"\"\n",
-    "# (method_declaration\n",
-    "#     name: (identifier) @method.name\n",
-    "#     body: (block) @method.body\n",
-    "# ) @method.declaration\n",
-    "# \"\"\")\n",
-    "\n",
     "\n",
     "def get_methods(src, tree):\n",
     "    captures = JAVA_METHOD_QUERY.captures(tree.root_node)\n",
@@ -219,62 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "74accea3-de2a-4b38-bbf2-b0c7f2be7aa4",
+   "execution_count": null,
+   "id": "c8798ed1-24c7-4694-a97a-a381ab122392",
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUMWORKERS = os.cpu_count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "c8798ed1-24c7-4694-a97a-a381ab122392",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf870ab19b314a30863be19b0c376b70",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Resolving data files:   0%|          | 0/757 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset({\n",
-      "    features: ['blob_id', 'directory_id', 'path', 'content_id', 'detected_licenses', 'license_type', 'repo_name', 'snapshot_id', 'revision_id', 'branch_name', 'visit_date', 'revision_date', 'committer_date', 'github_id', 'star_events_count', 'fork_events_count', 'gha_license_id', 'gha_event_created_at', 'gha_created_at', 'gha_language', 'src_encoding', 'language', 'is_vendor', 'is_generated', 'length_bytes', 'extension', 'filename'],\n",
-      "    num_rows: 10001\n",
-      "})\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd34c7c0efe04ef69abb0d350478dffd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/10001 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
     "ds = datasets.load_dataset(\"bigcode/the-stack-v2-dedup\", \"Java\", cache_dir=\"../cache\", streaming=True, split=\"train\")\n",
-    "\n",
+    "NUMWORKERS = os.cpu_count()\n",
     "data = []\n",
     "n =  10000\n",
     "for i, sample in enumerate(ds):\n",
@@ -292,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "d601380f",
    "metadata": {},
    "outputs": [],
@@ -304,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "82541f12-dd45-44f7-ad0f-928224086086",
    "metadata": {},
    "outputs": [
@@ -332,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "78f242aa-2972-4037-b5d9-acc1f1cc7308",
    "metadata": {
     "scrolled": true
@@ -357,7 +298,7 @@
        "})"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "id": "d99d75d7-bac9-4f47-bb2c-a5773f46ea18",
    "metadata": {},
    "outputs": [
@@ -433,19 +374,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "public void setYear(int Yr)\n",
-      "{\n",
-      "if (Yr < 2000 || Yr > 2017)\n",
-      "   Year =0;\n",
-      "else\n",
-      "   Year = Yr;\n",
+      "void enqueue(String name,String cat){\n",
+      "\tAnimal animal = new Animal(name,cat);\n",
+      "\tlist.add(animal);\n",
       "}\n"
      ]
     }
    ],
    "source": [
     "ds = new_ds\n",
-    "print(ds['content'][1])"
+    "print(ds['content'][-15])"
    ]
   },
   {
@@ -2954,18 +2892,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "5537bbb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = Dataset.load_from_disk(\"../datasets/Dec17_Final_Step1_2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "9fc1a456",
    "metadata": {},
    "outputs": [
     {
@@ -2977,18 +2905,19 @@
        "})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ds = Dataset.load_from_disk(\"../datasets/Dec17_Final_Step1_2\")\n",
     "ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "fa02eef9-f557-4f36-adf3-0115a5c08041",
    "metadata": {},
    "outputs": [
@@ -2996,103 +2925,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "import java.util.Arrays;\n",
+      "package com.dnp.test.modular.controller;\n",
       "\n",
-      "public class BestTimeBuyAndSellStock {\n",
-      "    //--------------  Solution 1 -------------------//\n",
-      "    // brute force (Time Limit Exceeded)\n",
-      "    public int maxProfit(int[] prices) {\n",
-      "        int N = prices.length;\n",
-      "        int res = 0;  // min, buy and sell on the same day\n",
-      "        for (int i = 0; i < N; i++) {\n",
-      "            for (int j = i; j < N; j++) {\n",
-      "                res = Math.max(res, prices[j] - prices[i]);\n",
-      "            }\n",
-      "        }\n",
-      "        return res;\n",
-      "    }\n",
+      "import com.dnp.test.modular.entity.UserRole;\n",
+      "import com.dnp.test.modular.service.UserRoleService;\n",
+      "import com.dnp.test.vo.PageVo;\n",
+      "import io.swagger.annotations.Api;\n",
+      "import io.swagger.annotations.ApiOperation;\n",
+      "import io.swagger.annotations.ApiParam;\n",
+      "import org.springframework.beans.factory.annotation.Autowired;\n",
+      "import org.springframework.http.MediaType;\n",
+      "import org.springframework.web.bind.annotation.*;\n",
       "\n",
-      "    //--------------  Solution 2  -------------------//\n",
-      "    // most intuitive solution\n",
-      "    public int maxProfit2(int[] prices) {\n",
-      "        // input validation\n",
-      "        if (prices == null || prices.length <= 1) {\n",
-      "            return 0;\n",
-      "        }\n",
+      "/**\n",
+      " * <p>\n",
+      " * 用户角色  前端控制器\n",
+      " * </p>\n",
+      " *\n",
+      " * @author huazai\n",
+      " * @since 2018-11-15\n",
+      " */\n",
+      "@Api(value = \"UserRoleController\", description = \"用户角色\")\n",
+      "@RestController\n",
+      "@RequestMapping(value = \"/userRole\", produces = MediaType.APPLICATION_JSON_UTF8_VALUE)\n",
+      "public class UserRoleController {\n",
+      "    @Autowired\n",
+      "    private UserRoleService userRoleService;\n",
       "\n",
-      "        // record the min up util now\n",
-      "        int min = Integer.MAX_VALUE;\n",
-      "        int res = 0;\n",
-      "        for (int i : prices) {\n",
-      "            min = Math.min(min, i);\n",
-      "            res = Math.max(res, i - min);\n",
-      "        }\n",
-      "        return res;\n",
-      "    }\n",
-      "\n",
-      "    //--------------  Solution 3  -----------------//\n",
-      "    // == maximal sub-array problem (diff)\n",
-      "    public int maxProfit3(int[] prices) {\n",
-      "        // input validation\n",
-      "        if (prices == null || prices.length == 0) {\n",
-      "            return 0;\n",
-      "        }\n",
-      "\n",
-      "        // calculate the result\n",
-      "        int sum = 0;\n",
-      "        int res = 0;\n",
-      "        for (int i = 0; i < prices.length; i++) {\n",
-      "            int diff = prices[i + 1] - prices[i];  // get the diff\n",
-      "            sum = Math.max(0, sum + diff);  // local\n",
-      "            res = Math.max(res, sum);       // global\n",
-      "        }\n",
-      "        return res;\n",
+      "    @RequestMapping(value = \"\", method = RequestMethod.GET)\n",
+      "    @ApiOperation(value = \"查询所有用户角色\", notes = \"查询所有用户角色\")\n",
+      "    public Object findAll(PageVo pageVo,\n",
+      "                          @ApiParam(name = \"search\", value = \"模糊查询字段\", required = false) @RequestParam(required = false, defaultValue = \"\") String search) {\n",
+      "        return null;\n",
       "    }\n",
       "\n",
       "\n",
-      "    ////////////////////  TEST ////////////////////\n",
-      "    private static void test(BestTimeBuyAndSellStock m, int[] A) {\n",
-      "        System.out.println(Arrays.toString(A));\n",
-      "        System.out.println(m.maxProfit(A) + \"\\n\");\n",
+      "    @RequestMapping(value = \"/{id}\", method = RequestMethod.GET)\n",
+      "    @ApiOperation(value = \"查询用户角色详情\", notes = \"查询用户角色详情\", httpMethod = \"GET\")\n",
+      "    public UserRole findById(@ApiParam(name = \"id\", value = \"用户角色id\", required = true) @PathVariable(\"id\") Integer id) {\n",
+      "        return userRoleService.getById(id);\n",
       "    }\n",
-      "    public static void main(String[] args) {\n",
-      "        BestTimeBuyAndSellStock solution = new BestTimeBuyAndSellStock();\n",
-      "        int[] prices1 = {1, 2, 5, 3, 4, 6, 2, 8};\n",
-      "        int[] prices2 = {7, 1, 5, 3, 6, 4};\n",
-      "        test(solution, prices1);\n",
-      "        test(solution, prices2);\n",
+      "\n",
+      "    @RequestMapping(value = \"/{id}\", method = RequestMethod.PUT)\n",
+      "    @ApiOperation(value = \"修改用户角色\", notes = \"修改用户角色\")\n",
+      "    public void updateById(UserRole userRole) {\n",
+      "        userRoleService.saveOrUpdate(userRole);\n",
       "    }\n",
-      "}\n"
+      "\n",
+      "    @RequestMapping(value = \"\", method = RequestMethod.POST)\n",
+      "    @ApiOperation(value = \"添加用户角色\", notes = \"添加用户角色\")\n",
+      "    public void save(\n",
+      "\n",
+      "            @ApiParam(name = \"userId\", value = \"用户id\")\n",
+      "            @RequestParam(required = false, name = \"userId\") Long userId\n",
+      "            ,\n",
+      "            @ApiParam(name = \"roleId\", value = \"角色id\")\n",
+      "            @RequestParam(required = false, name = \"roleId\") Long roleId\n",
+      "    ) {\n",
+      "        UserRole userRole = new UserRole(\n",
+      "\n",
+      "                userId, roleId);\n",
+      "        userRoleService.save(userRole);\n",
+      "    }\n",
+      "\n",
+      "    @RequestMapping(value = \"/{id}\", method = RequestMethod.DELETE)\n",
+      "    @ApiOperation(value = \"删除用户角色\", notes = \"修改用户角色\")\n",
+      "    public void deleteById(@ApiParam(name = \"id\", value = \"用户角色id\", required = true) @PathVariable(\"id\") Integer id) {\n",
+      "        userRoleService.removeById(id);\n",
+      "    }\n",
+      "\n",
+      "}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(ds['seed'][0])"
+    "print(ds['seed'][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "8d5579e1-7c33-438e-8e79-d8acab10b66b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd857e0595df46ce80c5486e469f0bbb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/10 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "AttributeError",
+     "evalue": "'Dataset' object has no attribute 'sample'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m subset \u001b[38;5;241m=\u001b[39m \u001b[43mds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m(\u001b[38;5;241m200\u001b[39m)\n\u001b[1;32m      2\u001b[0m subset\u001b[38;5;241m.\u001b[39msave_to_disk(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../datasets/Dec14_seed_subset\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Dataset' object has no attribute 'sample'"
+     ]
     }
    ],
    "source": [
-    "subset.save_to_disk(\"../datasets/Dec14_prompt\")"
+    "subset = ds.select(range(200))\n",
+    "subset.save_to_disk(\"../datasets/Dec14_seed_subset\")"
    ]
   },
   {
